# graphite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
domains/: DOMAIN.md
domains/graphs/: graph2.map  graph3.map  graph4.map
domains/weights/: graph1.weights  graph3.weights  graph4.weights
include/: graph.hpp
include/algorithms/: a_star.hpp  bfs.hpp  dfs.hpp  dijkstra.hpp  floyd_warshall.hpp  prim.hpp
include/graph/: graph.hpp
include/utils/: str2int.hpp  text_processing.hpp
include/utils/concepts/: node_concepts.hpp  numerical_concepts.hpp
src/: main.cpp
tests/: test_dfs.cpp  test_dijkstra.cpp  test_graph.cpp
